name:                   avr-shake
version:                0.0.0.1
stability:              experimental

cabal-version:          >= 1.2
build-type:             Simple

author:                 James Cook <mokus@deepbondi.net>
maintainer:             James Cook <mokus@deepbondi.net>
license:                PublicDomain
homepage:               https://github.com/mokus0/avr-shake

category:               Development
synopsis:               AVR Crosspack actions for shake build systems.
description:            AVR Crosspack actions for shake build systems.

Library
  ghc-options:          -fwarn-unused-imports -fwarn-unused-binds
  hs-source-dirs:       src
  exposed-modules:      Development.Shake.AVR
  build-depends:        base >= 3,
                        shake == 0.10.*
