name:                   avr-shake
version:                0.0.1.3
stability:              experimental

cabal-version:          >= 1.6
build-type:             Simple

author:                 James Cook <mokus@deepbondi.net>
maintainer:             James Cook <mokus@deepbondi.net>
license:                PublicDomain
homepage:               https://github.com/mokus0/avr-shake

category:               Development
synopsis:               AVR Crosspack actions for shake build systems.
description:            AVR Crosspack actions for shake build systems.

tested-with:            GHC == 7.4.2,
                        GHC == 7.6.3,
                        GHC == 7.8.4,
                        GHC == 7.10.1,
                        GHC == 7.11

source-repository head
  type: git
  location: git://github.com/mokus0/avr-shake.git

Library
  ghc-options:          -fwarn-unused-imports -fwarn-unused-binds
  hs-source-dirs:       src
  exposed-modules:      Development.Shake.AVR
                        System.Command.AVRDUDE
  build-depends:        base >= 3 && <5,
                        dependent-sum >= 0.2 && < 0.4,
                        mtl,
                        process,
                        shake >= 0.10
